Fix note title overflow

--- a/src/components/CreateNote.scss
+++ b/src/components/CreateNote.scss
@@ -39,14 +39,15 @@
       font-size: 24px;
       margin-bottom: 8px;
       height: 10%;
-      width: 70%;
       resize: none;
       border: none;
       background-color: $paper-imitation-color;
+      @include text-overflow-single-line(90%);
 
       &:focus,
       &:focus-visible {
         outline: 1px solid $primary-light-color;
+        overflow: auto;
       }
     }
 
@@ -88,6 +89,10 @@
       margin: 0;
       border-left: none;
       border-top: 40px solid;
+
+      .create-note_title {
+        @include text-overflow-single-line(90%);
+      }
 
       .create-note_btn {
         position: absolute;
